antlr/sqlbase/SqlBaseParser.js
// Generated from SqlBase.g4 by ANTLR 4.10.1
// jshint ignore: start
import antlr4 from 'antlr4';
import SqlBaseListener from './SqlBaseListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.PredictionContextCache();

export class SqlBaseParser extends antlr4.Parser {

    static grammarFileName = "SqlBase.g4";
    static literalNames = [ null, "','", "'('", "')'", "'.'", "'=>'", "'ALL'", 
                            "'AND'", "'ANY'", "'AS'", "'ASC'", "'BETWEEN'", 
                            "'BY'", "'COLUMN'", "'COLUMNS'", "'DATA'", "'DATE'", 
                            "'DAY'", "'DELETE'", "'DESC'", "'EXISTS'", "'FALSE'", 
                            "'FIRST'", "'FROM'", "'GROUP'", "'IN'", "'INNER'", 
                            "'INSERT'", "'INTO'", "'IS'", "'JOIN'", "'LEFT'", 
                            "'LIKE'", "'LIMIT'", "'NAME'", "'NOT'", "'NULL'", 
                            "'ON'", "'OR'", "'ORDER'", "'OUTER'", "'RIGHT'", 
                            "'ROW'", "'ROWS'", "'SELECT'", "'SQL'", "'TEXT'", 
                            "'TO'", "'TRUE'", "'TYPE'", "'UESCAPE'", "'VALUES'", 
                            "'WHERE'", "'='", null, "'<'", "'<='", "'>'", 
                            "'>='", "'+'", "'-'", "'*'", "'/'", "'%'", "'||'" ];
    static symbolicNames = [ null, null, null, null, null, null, "ALL", 
                             "AND", "ANY", "AS", "ASC", "BETWEEN", "BY", 
                             "COLUMN", "COLUMNS", "DATA", "DATE", "DAY", 
                             "DELETE", "DESC", "EXISTS", "FALSE", "FIRST", 
                             "FROM", "GROUP", "IN", "INNER", "INSERT", "INTO", 
                             "IS", "JOIN", "LEFT", "LIKE", "LIMIT", "NAME", 
                             "NOT", "NULL", "ON", "OR", "ORDER", "OUTER", 
                             "RIGHT", "ROW", "ROWS", "SELECT", "SQL", "TEXT", 
                             "TO", "TRUE", "TYPE", "UESCAPE", "VALUES", 
                             "WHERE", "EQ", "NEQ", "LT", "LTE", "GT", "GTE", 
                             "PLUS", "MINUS", "ASTERISK", "SLASH", "PERCENT", 
                             "CONCAT", "STRING", "UNICODE_STRING", "BINARY_LITERAL", 
                             "INTEGER_VALUE", "DECIMAL_VALUE", "IDENTIFIER", 
                             "DIGIT_IDENTIFIER", "QUOTED_IDENTIFIER", "BACKQUOTED_IDENTIFIER", 
                             "WS", "UNRECOGNIZED", "DELIMITER" ];
    static ruleNames = [ "singleStatement", "standaloneExpression", "statement", 
                         "tableElement", "columnDefinition", "likeClause", 
                         "sqlParameterDeclaration", "externalRoutineName", 
                         "query", "queryTerm", "queryPrimary", "sortItem", 
                         "querySpecification", "groupBy", "groupingElement", 
                         "groupingSet", "setQuantifier", "selectItem", "joinType", 
                         "joinCriteria", "columnAliases", "relationPrimary", 
                         "expression", "booleanExpression", "predicate", 
                         "valueExpression", "primaryExpression", "string", 
                         "comparisonOperator", "comparisonQuantifier", "booleanValue", 
                         "types", "type", "typeParameter", "baseType", "callArgument", 
                         "qualifiedName", "identifier", "number", "nonReserved" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = SqlBaseParser.ruleNames;
        this.literalNames = SqlBaseParser.literalNames;
        this.symbolicNames = SqlBaseParser.symbolicNames;
    }

    get atn() {
        return atn;
    }



	singleStatement() {
	    let localctx = new SingleStatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, SqlBaseParser.RULE_singleStatement);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 80;
	        this.statement();
	        this.state = 81;
	        this.match(SqlBaseParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	standaloneExpression() {
	    let localctx = new StandaloneExpressionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, SqlBaseParser.RULE_standaloneExpression);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 83;
	        this.expression();
	        this.state = 84;
	        this.match(SqlBaseParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	statement() {
	    let localctx = new StatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, SqlBaseParser.RULE_statement);
	    var _la = 0; // Token type
	    try {
	        this.state = 102;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case SqlBaseParser.SELECT:
	        case SqlBaseParser.VALUES:
	            localctx = new StatementDefaultContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 86;
	            this.query();
	            break;
	        case SqlBaseParser.INSERT:
	            localctx = new InsertIntoContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 87;
	            this.match(SqlBaseParser.INSERT);
	            this.state = 88;
	            this.match(SqlBaseParser.INTO);
	            this.state = 89;
	            this.qualifiedName();
	            this.state = 91;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===SqlBaseParser.T__1) {
	                this.state = 90;
	                this.columnAliases();
	            }

	            this.state = 93;
	            this.query();
	            break;
	        case SqlBaseParser.DELETE:
	            localctx = new DeleteContext(this, localctx);
	            this.enterOuterAlt(localctx, 3);
	            this.state = 95;
	            this.match(SqlBaseParser.DELETE);
	            this.state = 96;
	            this.match(SqlBaseParser.FROM);
	            this.state = 97;
	            this.qualifiedName();
	            this.state = 100;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===SqlBaseParser.WHERE) {
	                this.state = 98;
	                this.match(SqlBaseParser.WHERE);
	                this.state = 99;
	                this.booleanExpression();
	            }

	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	tableElement() {
	    let localctx = new TableElementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, SqlBaseParser.RULE_tableElement);
	    try {
	        this.state = 106;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case SqlBaseParser.ALL:
	        case SqlBaseParser.ANY:
	        case SqlBaseParser.ASC:
	        case SqlBaseParser.DESC:
	        case SqlBaseParser.LIMIT:
	        case SqlBaseParser.NAME:
	        case SqlBaseParser.ROW:
	        case SqlBaseParser.ROWS:
	        case SqlBaseParser.SQL:
	        case SqlBaseParser.TEXT:
	        case SqlBaseParser.TYPE:
	        case SqlBaseParser.IDENTIFIER:
	        case SqlBaseParser.DIGIT_IDENTIFIER:
	        case SqlBaseParser.QUOTED_IDENTIFIER:
	        case SqlBaseParser.BACKQUOTED_IDENTIFIER:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 104;
	            this.columnDefinition();
	            break;
	        case SqlBaseParser.LIKE:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 105;
	            this.likeClause();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	columnDefinition() {
	    let localctx = new ColumnDefinitionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, SqlBaseParser.RULE_columnDefinition);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 108;
	        this.identifier();
	        this.state = 109;
	        this.type();
	        this.state = 112;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===SqlBaseParser.NOT) {
	            this.state = 110;
	            this.match(SqlBaseParser.NOT);
	            this.state = 111;
	            this.match(SqlBaseParser.NULL);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	likeClause() {
	    let localctx = new LikeClauseContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, SqlBaseParser.RULE_likeClause);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 114;
	        this.match(SqlBaseParser.LIKE);
	        this.state = 115;
	        this.qualifiedName();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	sqlParameterDeclaration() {
	    let localctx = new SqlParameterDeclarationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, SqlBaseParser.RULE_sqlParameterDeclaration);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 117;
	        this.identifier();
	        this.state = 118;
	        this.type();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	externalRoutineName() {
	    let localctx = new ExternalRoutineNameContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, SqlBaseParser.RULE_externalRoutineName);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 120;
	        this.identifier();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	query() {
	    let localctx = new QueryContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, SqlBaseParser.RULE_query);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 122;
	        this.queryTerm();
	        this.state = 133;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===SqlBaseParser.ORDER) {
	            this.state = 123;
	            this.match(SqlBaseParser.ORDER);
	            this.state = 124;
	            this.match(SqlBaseParser.BY);
	            this.state = 125;
	            this.sortItem();
	            this.state = 130;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===SqlBaseParser.T__0) {
	                this.state = 126;
	                this.match(SqlBaseParser.T__0);
	                this.state = 127;
	                this.sortItem();
	                this.state = 132;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	        }

	        this.state = 137;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===SqlBaseParser.LIMIT) {
	            this.state = 135;
	            this.match(SqlBaseParser.LIMIT);
	            this.state = 136;
	            localctx.limit = this._input.LT(1);
	            _la = this._input.LA(1);
	            if(!(_la===SqlBaseParser.ALL || _la===SqlBaseParser.INTEGER_VALUE)) {
	                localctx.limit = this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	queryTerm() {
	    let localctx = new QueryTermContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, SqlBaseParser.RULE_queryTerm);
	    try {
	        localctx = new QueryTermDefaultContext(this, localctx);
	        this.enterOuterAlt(localctx, 1);
	        this.state = 139;
	        this.queryPrimary();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	queryPrimary() {
	    let localctx = new QueryPrimaryContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, SqlBaseParser.RULE_queryPrimary);
	    var _la = 0; // Token type
	    try {
	        this.state = 151;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case SqlBaseParser.SELECT:
	            localctx = new QueryPrimaryDefaultContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 141;
	            this.querySpecification();
	            break;
	        case SqlBaseParser.VALUES:
	            localctx = new InlineTableContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 142;
	            this.match(SqlBaseParser.VALUES);
	            this.state = 143;
	            this.expression();
	            this.state = 148;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===SqlBaseParser.T__0) {
	                this.state = 144;
	                this.match(SqlBaseParser.T__0);
	                this.state = 145;
	                this.expression();
	                this.state = 150;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	sortItem() {
	    let localctx = new SortItemContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, SqlBaseParser.RULE_sortItem);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 153;
	        this.expression();
	        this.state = 155;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===SqlBaseParser.ASC || _la===SqlBaseParser.DESC) {
	            this.state = 154;
	            localctx.ordering = this._input.LT(1);
	            _la = this._input.LA(1);
	            if(!(_la===SqlBaseParser.ASC || _la===SqlBaseParser.DESC)) {
	                localctx.ordering = this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	querySpecification() {
	    let localctx = new QuerySpecificationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, SqlBaseParser.RULE_querySpecification);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 157;
	        this.match(SqlBaseParser.SELECT);
	        this.state = 159;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,11,this._ctx);
	        if(la_===1) {
	            this.state = 158;
	            this.setQuantifier();

	        }
	        this.state = 161;
	        this.selectItem();
	        this.state = 166;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===SqlBaseParser.T__0) {
	            this.state = 162;
	            this.match(SqlBaseParser.T__0);
	            this.state = 163;
	            this.selectItem();
	            this.state = 168;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 178;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===SqlBaseParser.FROM) {
	            this.state = 169;
	            this.match(SqlBaseParser.FROM);
	            this.state = 170;
	            this.relationPrimary();
	            this.state = 175;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===SqlBaseParser.T__0) {
	                this.state = 171;
	                this.match(SqlBaseParser.T__0);
	                this.state = 172;
	                this.relationPrimary();
	                this.state = 177;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	        }

	        this.state = 182;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===SqlBaseParser.WHERE) {
	            this.state = 180;
	            this.match(SqlBaseParser.WHERE);
	            this.state = 181;
	            localctx.where = this.booleanExpression();
	        }

	        this.state = 187;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===SqlBaseParser.GROUP) {
	            this.state = 184;
	            this.match(SqlBaseParser.GROUP);
	            this.state = 185;
	            this.match(SqlBaseParser.BY);
	            this.state = 186;
	            this.groupBy();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	groupBy() {
	    let localctx = new GroupByContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, SqlBaseParser.RULE_groupBy);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 189;
	        this.groupingElement();
	        this.state = 194;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===SqlBaseParser.T__0) {
	            this.state = 190;
	            this.match(SqlBaseParser.T__0);
	            this.state = 191;
	            this.groupingElement();
	            this.state = 196;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	groupingElement() {
	    let localctx = new GroupingElementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, SqlBaseParser.RULE_groupingElement);
	    try {
	        localctx = new SingleGroupingSetContext(this, localctx);
	        this.enterOuterAlt(localctx, 1);
	        this.state = 197;
	        this.groupingSet();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	groupingSet() {
	    let localctx = new GroupingSetContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, SqlBaseParser.RULE_groupingSet);
	    var _la = 0; // Token type
	    try {
	        this.state = 212;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case SqlBaseParser.T__1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 199;
	            this.match(SqlBaseParser.T__1);
	            this.state = 208;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(((((_la - 6)) & ~0x1f) == 0 && ((1 << (_la - 6)) & ((1 << (SqlBaseParser.ALL - 6)) | (1 << (SqlBaseParser.ANY - 6)) | (1 << (SqlBaseParser.ASC - 6)) | (1 << (SqlBaseParser.DESC - 6)) | (1 << (SqlBaseParser.FALSE - 6)) | (1 << (SqlBaseParser.LIMIT - 6)) | (1 << (SqlBaseParser.NAME - 6)) | (1 << (SqlBaseParser.NOT - 6)) | (1 << (SqlBaseParser.NULL - 6)))) !== 0) || ((((_la - 42)) & ~0x1f) == 0 && ((1 << (_la - 42)) & ((1 << (SqlBaseParser.ROW - 42)) | (1 << (SqlBaseParser.ROWS - 42)) | (1 << (SqlBaseParser.SQL - 42)) | (1 << (SqlBaseParser.TEXT - 42)) | (1 << (SqlBaseParser.TRUE - 42)) | (1 << (SqlBaseParser.TYPE - 42)) | (1 << (SqlBaseParser.PLUS - 42)) | (1 << (SqlBaseParser.MINUS - 42)) | (1 << (SqlBaseParser.STRING - 42)) | (1 << (SqlBaseParser.UNICODE_STRING - 42)) | (1 << (SqlBaseParser.INTEGER_VALUE - 42)) | (1 << (SqlBaseParser.DECIMAL_VALUE - 42)) | (1 << (SqlBaseParser.IDENTIFIER - 42)) | (1 << (SqlBaseParser.DIGIT_IDENTIFIER - 42)) | (1 << (SqlBaseParser.QUOTED_IDENTIFIER - 42)) | (1 << (SqlBaseParser.BACKQUOTED_IDENTIFIER - 42)))) !== 0)) {
	                this.state = 200;
	                this.expression();
	                this.state = 205;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	                while(_la===SqlBaseParser.T__0) {
	                    this.state = 201;
	                    this.match(SqlBaseParser.T__0);
	                    this.state = 202;
	                    this.expression();
	                    this.state = 207;
	                    this._errHandler.sync(this);
	                    _la = this._input.LA(1);
	                }
	            }

	            this.state = 210;
	            this.match(SqlBaseParser.T__2);
	            break;
	        case SqlBaseParser.ALL:
	        case SqlBaseParser.ANY:
	        case SqlBaseParser.ASC:
	        case SqlBaseParser.DESC:
	        case SqlBaseParser.FALSE:
	        case SqlBaseParser.LIMIT:
	        case SqlBaseParser.NAME:
	        case SqlBaseParser.NOT:
	        case SqlBaseParser.NULL:
	        case SqlBaseParser.ROW:
	        case SqlBaseParser.ROWS:
	        case SqlBaseParser.SQL:
	        case SqlBaseParser.TEXT:
	        case SqlBaseParser.TRUE:
	        case SqlBaseParser.TYPE:
	        case SqlBaseParser.PLUS:
	        case SqlBaseParser.MINUS:
	        case SqlBaseParser.STRING:
	        case SqlBaseParser.UNICODE_STRING:
	        case SqlBaseParser.INTEGER_VALUE:
	        case SqlBaseParser.DECIMAL_VALUE:
	        case SqlBaseParser.IDENTIFIER:
	        case SqlBaseParser.DIGIT_IDENTIFIER:
	        case SqlBaseParser.QUOTED_IDENTIFIER:
	        case SqlBaseParser.BACKQUOTED_IDENTIFIER:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 211;
	            this.expression();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	setQuantifier() {
	    let localctx = new SetQuantifierContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, SqlBaseParser.RULE_setQuantifier);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 214;
	        this.match(SqlBaseParser.ALL);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


